working 2D animation. well tested on local simulacro. needs tests at banana.dev plus video download

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,39 @@
-sanic==22.6.2
-diffusers==0.2.3
+torch
+torchvision
+omegaconf
+einops
+torchmetrics
+torchtext
 transformers
-scipy
+kornia
+accelerate
+resize-right
+opencv-contrib-python
+numexpr
+clean-fid
+open-clip-torch
+spicy
+requests
+aiofiles
+numpy
+tqdm
+timm
+xformers
+Pillow
+ftfy
+regex
+PyYAML
+scikit-image
+matplotlib
+jsonmerge
+torchsde
+torchdiffeq
+scikit-learn
+numpngw
+pandas
+ipython
+sanic
+diffusers
+triton
+opencv-python
+pytorch_lightning
