--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-torch
-torchvision
-omegaconf
-einops
+torch~=1.12.1+cu113
+torchvision~=0.13.1+cu113
+omegaconf~=2.2.3
+einops~=0.4.1
 torchmetrics
 torchtext
-transformers
+transformers~=4.26.0
 kornia
 accelerate
 resize-right
@@ -13,27 +13,29 @@ numexpr
 clean-fid
 open-clip-torch
 spicy
-requests
+requests~=2.28.2
 aiofiles
-numpy
-tqdm
-timm
-xformers
-Pillow
-ftfy
-regex
-PyYAML
-scikit-image
-matplotlib
-jsonmerge
-torchsde
-torchdiffeq
-scikit-learn
-numpngw
-pandas
-ipython
-sanic
+numpy~=1.24.1
+tqdm~=4.64.1
+timm~=0.6.12
+xformers~=0.0.13.dev0
+Pillow~=9.4.0
+ftfy~=6.1.1
+regex~=2022.10.31
+PyYAML~=6.0
+scikit-image~=0.19.3
+matplotlib~=3.6.3
+jsonmerge~=1.9.0
+torchsde~=0.2.5
+torchdiffeq~=0.2.3
+scikit-learn~=1.2.1
+numpngw~=0.1.2
+pandas~=1.5.3
+ipython~=8.9.0
+sanic~=22.12.0
 diffusers
 triton
 opencv-python
 pytorch_lightning
+gdown~=4.6.0
+scipy~=1.10.0
