--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-torch~=1.12.1+cu113
-torchvision~=0.13.1+cu113
-omegaconf~=2.2.3
-einops~=0.4.1
-torchmetrics
-torchtext
+torch==1.13.1
+torchvision==0.14.1
+omegaconf==2.3.0
+einops==0.6.0
+torchmetrics==0.11.1
+torchtext==0.14.1
 transformers~=4.26.0
-kornia
+kornia==0.6.9
 accelerate
 resize-right
 opencv-contrib-python
 numexpr
 clean-fid
-open-clip-torch
+open-clip-torch==2.11.1
 spicy
 requests~=2.28.2
 aiofiles
@@ -36,6 +36,6 @@ sanic~=22.12.0
 diffusers
 triton
 opencv-python
-pytorch_lightning
+pytorch_lightning==1.9.0
 gdown~=4.6.0
 scipy~=1.10.0
